[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "piaxis-sdk"
version = "0.2.3"
description = "Official Python SDK for the Piaxis partner API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Piaxis" }
]
keywords = ["piaxis", "payments", "escrow", "sdk", "python"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27,<1"
]

[project.urls]
Homepage = "https://github.com/piaxepay/python-sdk"
Documentation = "https://api.gopiaxis.com/api/docs/"
Package = "https://pypi.org/project/piaxis-sdk/"
Repository = "https://github.com/piaxepay/python-sdk"
Issues = "https://github.com/piaxepay/python-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/piaxis_sdk"]
