[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "piaxis-sdk"
version = "0.1.0"
description = "Official Python SDK for the Piaxis partner API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Piaxis" }
]
dependencies = [
  "httpx>=0.27,<1"
]

[project.urls]
Homepage = "https://gopiaxis.com"
Documentation = "https://api.gopiaxis.com/api/docs/"

[tool.hatch.build.targets.wheel]
packages = ["src/piaxis_sdk"]
